--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
   },
   "dependencies": {
     "@next/font": "13.2.4",
+    "@react-three/drei": "^9.58.5",
+    "@react-three/fiber": "^8.12.0",
+    "framer-motion": "^10.9.1",
+    "gsap": "^3.11.5",
     "next": "13.2.4",
+    "raw-loader": "^4.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "three": "^0.150.1"
+  },
+  "devDependencies": {
+    "sass": "^1.60.0"
   }
 }
